handle command line arguments

--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -6,11 +6,11 @@
 #    By: fnichola <fnichola@student.42tokyo.jp>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/10/09 18:01:32 by fnichola          #+#    #+#              #
-#    Updated: 2022/12/16 03:07:05 by fnichola         ###   ########.fr        #
+#    Updated: 2022/12/27 03:29:18 by fnichola         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = a.out
+NAME = convert
 
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
